# imu_preintegration_Cpp

./: .gitignore  CMakeLists.txt  IMUDataRawData.txt  IMUcam_RawData.txt  Lib_preintegration.cpp  Lib_preintegration.h  README.md  coordinate_modi.m  correct_rect.txt  main.cpp  optimizeIMU.cpp  se3.h  se3_ops.h
g2o/: CMakeLists.txt
g2o/build-qt/: CMakeCache.txt  Makefile  cmake_install.cmake  g2o.cbp
g2o/g2o/core/: block_solver.h
g2o/g2o/types/: types_IMU.cpp  types_IMU.h  types_six_dof_expmap.h
